--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Donate Today</title>
 </head>
 <body>
@@ -17,7 +17,21 @@
         </div>
     </header>
     <main>
-
+        <section class="donate-section">
+            <h2 class="donate-title">Donate Today</h2>
+            <p class="donate-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias accusamus eveniet modi animi eaque debitis ullam ipsam! </p>
+            <div class="donate-btns">
+                <button class="donate-btn">100tk</button>
+                <button class="donate-btn-secondary">200tk</button>
+                <button class="donate-btn">500tk</button>
+                <button class="donate-btn">1000tk</button>
+                <button class="donate-btn">5000tk</button>
+            </div>
+            <div class="donate-input-container">
+                <input type="text" name="" id="" class="donate-input" placeholder="Other Amount(Taka)">
+                <button class="header-btn">Donate Now</button>
+            </div>
+        </section>
     </main>
     <footer>
 
