donate section added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
                 <button class="header-btn">Donate Now</button>
             </div>
         </section>
+        <section class="our-donate-plan-section">
+            <h1 class="donate-title">Our donate plan</h1>
+            <p class="donate-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita cupiditate magni earum voluptatem vitae temporibus magnam dignissimos error quod culpa.</p>
+            <div class="donate-plan-container">
+                <div class="donate-plan col-1">
+                    <img src="./icons/food.png" alt="" class="donate-pic">
+                    <h3 class="donate-heading">Food for a family</h3>
+                    <p class="donate-plan-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio recusandae neque possimus cupiditate!</p>
+                </div>
+                <div class="donate-plan col-2">
+                    <img src="./icons/shelter.png" alt=""  class="donate-pic">
+                    <h3 class="donate-heading">Shelter for a family</h3>
+                    <p class="donate-plan-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio recusandae neque possimus cupiditate!</p>
+                </div>
+                <div class="donate-plan col-3">
+                    <img src="./icons/Frame-1.png" alt="" class="donate-pic">
+                    <h3 class="donate-heading">Education for child</h3>
+                    <p class="donate-plan-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio recusandae neque possimus cupiditate!</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
