show case section added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
                 </div>
             </div>
         </section>
+        <section class="showcase-section">
+            <div class="showcase-container">
+                <div class="showcase-content">
+                    <h2 class="donate-title">Their lives depends on your donation</h2>
+                    <p class="showcase-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi iusto voluptatum rem, obcaecati ipsam ullam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, eos!</p>
+                    <button class="showcase-btn">How to contribute</button>
+                </div>
+                <img src="./images/donation1.jpg" alt="" class="showcase-img">
+            </div>
+            <div class="showcase-container">
+                <img src="./images/donation9.jpg" alt="" class="showcase-img">
+                <div class="showcase-content ext-margin">
+                    <h2 class="donate-title">They need us <br> to survive</h2>
+                    <p class="showcase-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi iusto voluptatum rem, obcaecati ipsam ullam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, eos!</p>
+                    <button class="showcase-btn">How to contribute</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
