--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>Donate Today</title>
 </head>
 <body>
@@ -71,9 +72,18 @@
                 </div>
             </div>
         </section>
+        <section class="get-update">
+            <h1 class="donate-title">Get My Updates</h1>
+            <p class="donate-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aliquid provident iste?reprehenderit sapiente animi praesentium delectus ipsam voluptas distinctio.</p>
+        </section>
+        <form action="" class="sub-form">
+            <input type="email" name="" id="" placeholder="Email">
+            <input type="submit" value="Subscribe">
+        </form>
     </main>
-    <footer>
-
+    <footer >
+        <h1 class="f-header">Be Humble</h1>
+        <p class="f-description">I'm gonna do it</p>
     </footer>
 </body>
 </html>
